insert edge/node tells user what to do, self edges are multi, adj matrix

--- a/GarphIt.web/Pages/AdjMatrix.razor
+++ b/GarphIt.web/Pages/AdjMatrix.razor
@@ -109,7 +109,7 @@
         }
         else
         {
-            <DialogButton Content="Text View" OnClick="(() => TextView = !TextView)" />
+            <DialogButton Content="Text View" OnClick="() => { TextView = !TextView; ShowText = GetText(); }" />
             <DialogButton Content="Close" OnClick="@CloseMatrix" />
         }
     </DialogButtons>
