--- a/GarphIt.web/Pages/Home.razor
+++ b/GarphIt.web/Pages/Home.razor
@@ -38,11 +38,11 @@
 {
     @if (StartAlgorithm.Type != AlgorithmType.NoInput && StartAlgorithm.StartNode == null)
     {
-        <li class="navbar-text font-weight-bold">Choose Start Node</li>
+        <li class="navbar-text font-weight-bold px-2">Choose Start Node</li>
     }
     else if (StartAlgorithm.EndNode == null && StartAlgorithm.Type == AlgorithmType.TwoInput)
     {
-        <li class="navbar-text font-weight-bold">Choose End Node</li>
+        <li class="navbar-text font-weight-bold px-2">Choose End Node</li>
     }
     else
     {
