--- a/GarphIt.web/wwwroot/css/site.css
+++ b/GarphIt.web/wwwroot/css/site.css
@@ -66,7 +66,24 @@ svg {
     text-align: center;
 }
 
-.font-small{
+.e-numeric.e-custom .e-input-group-icon.e-spin-up:before {
+    content: "\e823";
+    color: rgba(0, 0, 0, 0.54);
+}
+
+.e-numeric.e-custom .e-input-group-icon.e-spin-down:before {
+    content: "\e934";
+    color: rgba(0, 0, 0, 0.54);
+}
+
+.e-numeric.e-custom {
+    margin: 0px;
+    box-shadow: none;
+    max-width: 130px;
+    font-size: small;
+}
+
+.font-small {
     font-size: 10px;
 }
 
