--- a/GarphIt.web/Pages/AlgoEdgeLine.razor
+++ b/GarphIt.web/Pages/AlgoEdgeLine.razor
@@ -1,4 +1,4 @@
-﻿@using GraphIt.web.models
+﻿@using GraphIt.web.Models
 <g>
     <path id="@Edge.EdgeId" d="@ShowEdge.Path" stroke-width="@Edge.Width" stroke="@Edge.EdgeColor"
           marker-end="url(#@("arrowhead"+Edge.EdgeId))" fill="none" />
