--- a/GarphIt.web/Pages/File.razor
+++ b/GarphIt.web/Pages/File.razor
@@ -45,11 +45,11 @@
                     <label for="FileUpload2" class="btn btn-outline-success shadow-none btn-sm pointer">
                         Together
                     </label>
-                    <InputFile id="FileUpload2" OnChange="(e) => OpenGraphItFile(e, false)" accept=".graphit" />
+                    <InputFile id="FileUpload2" OnChange="(e) => OpenGraphItFile(e, false)" accept=".phanatic" />
                     <label for="FileUpload" class="btn btn-outline-danger shadow-none btn-sm pointer">
                         Overwrite
                     </label>
-                    <InputFile id="FileUpload" OnChange="(e) => OpenGraphItFile(e, true)" accept=".graphit" />
+                    <InputFile id="FileUpload" OnChange="(e) => OpenGraphItFile(e, true)" accept=".phanatic" />
                     <button class="ml-auto btn btn-outline-dark shadow-none btn-sm" @onclick="(() => OpenPreference = false)">
                         Cancel
                     </button>
