--- a/GarphIt.web/Pages/Index.razor
+++ b/GarphIt.web/Pages/Index.razor
@@ -37,6 +37,7 @@ else
                         DeleteActiveNodes="DeleteActiveNodes" DeleteActiveEdges="DeleteActiveEdges"></Design>
                 break;
             case NavChoice.About:
+                <About></About>
                 break;
         }
     </ul>
