--- a/GarphIt.web/Pages/NavBar.razor
+++ b/GarphIt.web/Pages/NavBar.razor
@@ -1,7 +1,7 @@
 ﻿@inherits NavBarBase
 
 <nav class="navbar sticky-top navbar-expand navbar-custom p-0">
-    <span class="navbar-brand logo-custom p-2 m-0">GraphIt</span>
+    <span class="navbar-brand logo-custom p-0 m-0"><img src="files/graphanaticlogo.svg"></span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
