--- a/GraphIt.wasm/Pages/Design/Design.razor
+++ b/GraphIt.wasm/Pages/Design/Design.razor
@@ -28,7 +28,7 @@
 @switch (SelectDesign)
 {
     case SelectDesign.DefaultNode:
-        <DefaultNode @bind-DefaultOptions="DefaultOptions"></DefaultNode>
+        <DefaultNode @bind-DefaultOptions="DefaultOptions" Nodes="Nodes" NodesChanged="GoUpdateNodes"></DefaultNode>
         break;
     case SelectDesign.DefaultEdge:
         <DefaultEdge @bind-DefaultOptions="DefaultOptions"></DefaultEdge>
@@ -40,7 +40,7 @@
         <DefaultEdge @bind-DefaultOptions="DefaultAlgoOptions"></DefaultEdge>
         break;
     case SelectDesign.SelectedNode:
-        <SelectedNode ActiveNodes="ActiveNodes" ActiveNodesChanged="GoUpdateActiveNodes" Nodes="Nodes" NodesChanged="GoUpdateNodes" DeleteActiveNodes="GoDeleteActiveNodes"></SelectedNode>
+        <SelectedNode ActiveNodes="ActiveNodes" ActiveNodesChanged="GoUpdateActiveNodes" DeleteActiveNodes="GoDeleteActiveNodes"></SelectedNode>
         break;
     case SelectDesign.SelectedEdge:
         <SelectedEdge ActiveEdges="ActiveEdges" ActiveEdgesChanged="GoUpdateActiveEdges" DefaultOptions="DefaultOptions" DeleteActiveEdges="GoDeleteActiveEdges"></SelectedEdge>
