--- a/GraphIt.wasm/Pages/About.razor
+++ b/GraphIt.wasm/Pages/About.razor
@@ -16,7 +16,7 @@
         </Header>
         <Content>
             <div class="row">
-                <iframe width="340" height="255" src="https://www.youtube.com/embed/gXgEDyodOJU" frameborder="0" allowfullscreen></iframe>
+                <iframe width="340" height="255" src="https://www.youtube.com/embed/RKnWNCdoHgM" frameborder="0" allowfullscreen></iframe>
             </div>
         </Content>
     </DialogTemplates>
