Visualize Algorithms, Grouped nodes and edges to Graph

--- a/GraphIt.wasm/Pages/About.razor
+++ b/GraphIt.wasm/Pages/About.razor
@@ -42,5 +42,8 @@
     </DialogTemplates>
 </SfDialog>
 
-@code{ private bool ShowVideo { get; set; } = false;
-    private bool ShowAbout { get; set; } = false; }
+@code
+{ 
+    private bool ShowVideo { get; set; } = false;
+    private bool ShowAbout { get; set; } = false; 
+}
