--- a/GraphIt.wasm/_Imports.razor
+++ b/GraphIt.wasm/_Imports.razor
@@ -9,6 +9,7 @@
 @using GraphIt.wasm
 @using GraphIt.wasm.Shared
 @using GraphIt.wasm.Pages.Design
+@using GraphIt.wasm.Pages.Footer
 @using GraphIt.wasm.Models
 @using GraphIt.wasm.Services
 @using Syncfusion.Blazor.Inputs
