--- a/GraphIt.wasm/Pages/Canvas.razor
+++ b/GraphIt.wasm/Pages/Canvas.razor
@@ -2,11 +2,11 @@
 
 <SfContextMenu @ref="ObjectContextMenu" TValue="MenuItem">
     <MenuItems>
-        <MenuItem Text="Copy" Disabled="@(!ActiveNodes.Any())" IconCss="oi oi-layers"></MenuItem>
-        <MenuItem Text="Paste" Disabled="@(!CopiedNodes.Any())" IconCss="oi oi-clipboard"></MenuItem>
+        <MenuItem Text="Copy" Disabled="@(!ActiveGraph.Nodes.Any())" IconCss="oi oi-layers"></MenuItem>
+        <MenuItem Text="Paste" Disabled="@(!CopiedGraph.Nodes.Any())" IconCss="oi oi-clipboard"></MenuItem>
         <MenuItem Separator="true"></MenuItem>
-        <MenuItem Text="Insert Edge" Hidden="@(ActiveNodes.Count != 1)" IconCss="oi oi-transfer"></MenuItem>
-        <MenuItem Text="Align" Disabled="@(ActiveNodes.Count < 2)" IconCss="oi oi-project">
+        <MenuItem Text="Insert Edge" Hidden="@(ActiveGraph.Nodes.Count != 1)" IconCss="oi oi-transfer"></MenuItem>
+        <MenuItem Text="Align" Disabled="@(ActiveGraph.Nodes.Count < 2)" IconCss="oi oi-project">
             <MenuItems>
                 <MenuItem Text="Left" IconCss="oi oi-align-left"></MenuItem>
                 <MenuItem Text="Center" IconCss="oi oi-align-center"></MenuItem>
@@ -17,8 +17,8 @@
                 <MenuItem Text="Bottom" IconCss="oi oi-vertical-align-bottom"></MenuItem>
             </MenuItems>
         </MenuItem>
-        <MenuItem Text="Edit" Hidden="@(ActiveNodes.Any() && ActiveEdges.Any())" IconCss="oi oi-pencil"></MenuItem>
-        <MenuItem Text="Edit" Hidden="@(!(ActiveNodes.Any() && ActiveEdges.Any()))" IconCss="oi oi-pencil">
+        <MenuItem Text="Edit" Hidden="@(ActiveGraph.Nodes.Any() && ActiveGraph.Edges.Any())" IconCss="oi oi-pencil"></MenuItem>
+        <MenuItem Text="Edit" Hidden="@(!(ActiveGraph.Nodes.Any() && ActiveGraph.Edges.Any()))" IconCss="oi oi-pencil">
             <MenuItems>
                 <MenuItem Text="Nodes" IconCss="oi oi-media-record"></MenuItem>
                 <MenuItem Text="Edges" IconCss="oi oi-transfer"></MenuItem>
@@ -31,7 +31,7 @@
 <SfContextMenu @ref="CanvasContextMenu" TValue="MenuItem">
     <MenuItems>
         <MenuItem Text="Copy" Disabled="true" IconCss="oi oi-layers"></MenuItem>
-        <MenuItem Text="Paste" Disabled="@(!CopiedNodes.Any())" IconCss="oi oi-clipboard"></MenuItem>
+        <MenuItem Text="Paste" Disabled="@(!CopiedGraph.Nodes.Any())" IconCss="oi oi-clipboard"></MenuItem>
         <MenuItem Separator="true"></MenuItem>
         <MenuItem Text="Zoom In" IconCss="oi oi-zoom-in"></MenuItem>
         <MenuItem Text="Zoom Out" IconCss="oi oi-zoom-out"></MenuItem>
@@ -57,56 +57,50 @@
     <MenuEvents TValue="MenuItem" ItemSelected="@Select"></MenuEvents>
 </SfContextMenu>
 
-<svg viewBox="@SVGControl.Xaxis @SVGControl.Yaxis @SVGControl.Width @SVGControl.Height"
+<svg viewBox="@SVGControl.Xaxis @SVGControl.Yaxis @SVGControl.Width @SVGControl.Height" @ref="SVGComponent"
      tabindex="0" class="@SvgClass" @onmousemove="OnMove" @onmousedown="OnMouseDown" @onkeyup="OnKeyUp" @onkeydown="OnKeyDown"
      @oncontextmenu="OnRightClick" @oncontextmenu:preventDefault="true" @onmouseup="OnMouseUp" @onmousewheel="OnScroll" @onwheel="OnScroll">
-    @if (StartAlgorithm.Done)
+    @if (StartAlgorithm.Done && AlgorithmGraph != null)
     {
-        @if (AlgorithmNodes != null)
+        foreach (Edge edge in AlgorithmGraph.Edges)
         {
-            @if (AlgorithmEdges != null)
-            {
-                foreach (Edge edge in AlgorithmEdges)
-                {
-                    <AlgoEdgeLine Edge="edge" AlgorithmNodes="AlgorithmNodes" DefaultOptions="DefaultOptions"></AlgoEdgeLine>
-                }
-            }
-            foreach (AlgorithmNode node in AlgorithmNodes)
-            {
-                <AlgoNodeCircle AlgorithmNode="node"></AlgoNodeCircle>
-            }
+            <AlgoEdgeLine Edge="edge" Weighted="Graph.Weighted" Directed="Graph.Directed"></AlgoEdgeLine>
+        }
+        foreach (Node node in AlgorithmGraph.Nodes)
+        {
+            <AlgoNodeCircle Node="node"></AlgoNodeCircle>
         }
     }
-    else if (Nodes != null)
+    else if (Graph.Nodes != null)
     {
-        @if (Edges != null)
+        @if (Graph.Edges != null)
         {
-            foreach (Edge edge in Edges)
+            foreach (Edge edge in Graph.Edges)
             {
-                if ((ActiveEdges.Where(e => e.EdgeId == edge.EdgeId).Any()))
+                if (ActiveGraph.Edges.Contains(edge))
                 {
                     continue;
                 }
-                <EdgeLine Edge="edge" Active="false" ActiveNodes="ActiveNodes" @bind-ObjectClicked="ObjectClicked" OnEdgeClick="OnEdgeClick" AddActiveEdge="AddActiveEdge"
-                          RemoveActiveEdge="RemoveActiveEdge" OnEdgeRightClick="OnEdgeRightClick" DefaultOptions="DefaultOptions" Nodes="Nodes"></EdgeLine>
+                <EdgeLine Edge="edge" Active="false" ActiveNodes="ActiveGraph.Nodes" @bind-ObjectClicked="ObjectClicked" OnEdgeClick="OnEdgeClick" AddActiveEdge="AddActiveEdge"
+                          RemoveActiveEdge="RemoveActiveEdge" OnEdgeRightClick="OnEdgeRightClick" Weighted="Graph.Weighted" Directed="Graph.Directed"></EdgeLine>
             }
-            foreach (Edge edge in ActiveEdges)
+            foreach (Edge edge in ActiveGraph.Edges)
             {
-                <EdgeLine Edge="edge" Active="true" ActiveNodes="ActiveNodes" @bind-ObjectClicked="ObjectClicked" OnEdgeClick="OnEdgeClick" AddActiveEdge="AddActiveEdge"
-                          RemoveActiveEdge="RemoveActiveEdge" DefaultOptions="DefaultOptions" Nodes="Nodes"></EdgeLine>
+                <EdgeLine Edge="edge" Active="true" ActiveNodes="ActiveGraph.Nodes" @bind-ObjectClicked="ObjectClicked" OnEdgeClick="OnEdgeClick" AddActiveEdge="AddActiveEdge"
+                          RemoveActiveEdge="RemoveActiveEdge" Weighted="Graph.Weighted" Directed="Graph.Directed"></EdgeLine>
             }
         }
-        foreach (Node node in Nodes)
+        foreach (Node node in Graph.Nodes)
         {
 
-            if ((ActiveNodes.Where(n => n.NodeId == node.NodeId).Any()))
+            if (ActiveGraph.Nodes.Contains(node))
             {
                 continue;
             }
             <NodeCircle Node="node" Active="false" @bind-ObjectClicked="ObjectClicked" OnNodeClick="OnNodeClick"
                         OnNodeRightClick="OnNodeRightClick" AddActiveNode="AddActiveNode" RemoveActiveNode="RemoveActiveNode"></NodeCircle>
         }
-        foreach (Node node in ActiveNodes)
+        foreach (Node node in ActiveGraph.Nodes)
         {
             <NodeCircle Node="node" Active="true" @bind-ObjectClicked="ObjectClicked" OnNodeClick="OnNodeClick"
                         OnNodeRightClick="OnNodeRightClick" AddActiveNode="AddActiveNode" RemoveActiveNode="RemoveActiveNode"></NodeCircle>
