--- a/GraphIt.wasm/Pages/Design/DefaultNode.razor
+++ b/GraphIt.wasm/Pages/Design/DefaultNode.razor
@@ -29,4 +29,4 @@ else
         <input class="shortInput" type="number" Min=25 Max=150 step=1 value="@DefaultOptions.NodeRadius" @onchange="OnDefRadiusChange" />
     </div>
 </li>
-<li class="NavNone p-2" @onclick="OnRelabel">Re-label</li>
+<li class="NavNone p-2" @onclick="async () => await Relabel.InvokeAsync(true)">Re-label</li>
