--- a/GraphIt.wasm/Pages/File.razor
+++ b/GraphIt.wasm/Pages/File.razor
@@ -7,14 +7,14 @@
     </button>
 
     <div class="dropdown-menu" aria-labelledby="saveas">
-        <a class="dropdown-item" @onclick="() => SaveSVGFile(true)">screen view SVG</a>
-        <a class="dropdown-item" @onclick="() => SaveSVGFile(false)">full view SVG</a>
+        <a class="dropdown-item" @onclick="async () => await SVGSaveAsChanged.InvokeAsync(SVGSaveAs.Page)">screen view SVG</a>
+        <a class="dropdown-item" @onclick="async () => await SVGSaveAsChanged.InvokeAsync(SVGSaveAs.Full)">full view SVG</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" @onclick="SaveGraphItFile">Graph File</a>
     </div>
 </li>
 <li class="NavNone p-2 border-right border-dark" @onclick="(() => OpenPreference = true)"><span class="pr-1 oi oi-envelope-open"></span>Open</li>
-<li class="NavNone p-2" @onclick="(() => NewGraphCheck = true)"><span class="pr-1 oi oi-reload"</span>New</li>
+<li class="NavNone p-2" @onclick="(() => NewGraphCheck = true)"><span class="pr-1 oi oi-reload"></span>New</li>
 @if (ErrorOpening)
 {
     <SfDialog Width="300px" IsModal="true">
